--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-.obsidian/
-.obsidian/plugins
-.obsidian/workspace.json
-.obsidian/workspace-mobile.json
-
-.trash/
-.DS_Store
-
-.gitignore
+.obsidian
+**/.vscode
+**/.env
+**/.DS_Store
